@@ -149,6 +149,7 @@ module Options = Main_args.Make_optcomp_options (struct
   let _dscheduling = set dump_scheduling
   let _dlinear = set dump_linear
   let _dstartup = set keep_startup_file
+  let _opaque = set opaque
 
   let anonymous = anonymous
 end);;
